  ``const char *`` as the string is stored beyond the call.

- Issue #2422: When compiled with the ``--with-valgrind`` option, the
  pymalloc allocator will be automatically disabled when running under
  Valgrind.  This gives improved memory leak detection when running
  under Valgrind, while taking advantage of pymalloc at other times.

Library
-------

- Issue #1682942: Improvements to configparser: support alternate
  delimiters, alternate comment prefixes and empty lines in values.

- Issue #9354: Provide getsockopt() in asyncore's file_wrapper.

- Issue #8966: ctypes: Remove implicit bytes-unicode conversion.

- Issue #9378: python -m pickle <pickle file> will now load and
  display the first object in the pickle file.

- Issue #4770: Restrict binascii module to accept only bytes (as specified).
  And fix the email package to encode to ASCII instead of
  ``raw-unicode-escape`` before ASCII-to-binary decoding.

- Issue #9384: python -m tkinter will now display a simple demo applet.

- The default size of the re module's compiled regular expression cache has
  been increased from 100 to 500 and the cache replacement policy has changed
  from simply clearing the entire cache on overflow to randomly forgetting 20%
  of the existing cached compiled regular expressions.  This is a performance
  win for applications that use a lot of regular expressions and limits the
  impact of the performance hit anytime the cache is exceeded.

- Issue #7113: Speed up loading in configparser. Patch by Łukasz Langa.

- Issue #9032: XML-RPC client retries the request on EPIPE error. The EPIPE
  error occurs when the server closes the socket and the client sends a big
  XML-RPC request.

- Issue #4629: getopt raises an error if an argument ends with = whereas getopt
  doesn't except a value (eg. --help= is rejected if getopt uses ['help='] long
  options).

- Issue #7989: Added pure python implementation of the `datetime`